build.log
(lg) root:/nas/ganluo/sglang/sgl-router# maturin build --release
âš ï¸  Warning: `build-backend` in pyproject.toml is not set to `maturin`, packaging tools such as pip will not use maturin to build this project.
ðŸ”— Found pyo3 bindings
ðŸ Found CPython 3.10 at /usr/local/conda/envs/lg/bin/python3
   Compiling sglang_router_rs v0.0.0 (/nas/ganluo/sglang/sgl-router)
error[E0583]: file not found for module `response_parser`
  --> src/routers/router.rs:15:1
   |
15 | mod response_parser;
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: to create the module `response_parser`, create file "src/routers/router/response_parser.rs" or "src/routers/router/response_parser/mod.rs"
   = note: if there is a `mod response_parser` elsewhere in the crate already, import it with `use crate::...` instead

error[E0119]: conflicting implementations of trait `LoadBalancingPolicyV2` for type `MarginalUtilityPolicy`
   --> src/policies/mod.rs:99:1
    |
99  | impl<T: LoadBalancingPolicy + ?Sized> LoadBalancingPolicyV2 for T {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `MarginalUtilityPolicy`
    |
   ::: src/policies/marginal_utility.rs:260:1
    |
260 | impl LoadBalancingPolicyV2 for MarginalUtilityPolicy {
    | ---------------------------------------------------- first implementation here

error[E0004]: non-exhaustive patterns: `&config::types::PolicyConfig::MarginalUtility { .. }` not covered
   --> src/config/validation.rs:88:15
    |
88  |         match policy {
    |               ^^^^^^ pattern `&config::types::PolicyConfig::MarginalUtility { .. }` not covered
    |
note: `config::types::PolicyConfig` defined here
   --> src/config/types.rs:74:10
    |
74  | pub enum PolicyConfig {
    |          ^^^^^^^^^^^^
...
102 |     MarginalUtility {
    |     --------------- not covered
    = note: the matched value is of type `&config::types::PolicyConfig`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
141 ~             },
142 +             &config::types::PolicyConfig::MarginalUtility { .. } => todo!()
    |

Some errors have detailed explanations: E0004, E0119, E0583.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `sglang_router_rs` (lib) due to 3 previous errors
ðŸ’¥ maturin failed
  Caused by: Failed to build a native library through cargo
  Caused by: Cargo build finished with "exit status: 101": `env -u CARGO PYO3_ENVIRONMENT_SIGNATURE="cpython-3.10-64bit" PYO3_PYTHON="/usr/local/conda/envs/lg/bin/python3" PYTHON_SYS_EXECUTABLE="/usr/local/conda/envs/lg/bin/python3" "cargo" "rustc" "--message-format" "json-render-diagnostics" "--manifest-path" "/nas/ganluo/sglang/sgl-router/Cargo.toml" "--release" "--lib" "--crate-type" "cdylib"`
(lg) root:/nas/ganluo/sglang/sgl-router# 


